--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!Doctype HTML>
 <html>
   <head>
-    <title>Cogs.Red System Report</title>
+    <title>Fleetmatica System Report</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css">
     <!-- Meta tags go here -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta property="og:description" content="See how Cogs.Red is doing">
-    <meta property="og:title" content="Cogs.Red System Report">
-    <meta property="og:url" content="https://status.cogs.red">
-    <meta property="og:image" content="https://static.cogs.red/img/icon.png">
+    <meta property="og:description" content="See how Fleetmatica is doing">
+    <meta property="og:title" content="Fleetmatica System Report">
+    <meta property="og:url" content="https://status.fleetmatica.com">
+    <meta property="og:image" content="https://static.fleetmatica.com/img/icon.png">
     <meta property="og:type" content="website">
-    <meta property="twitter:domain" content="status.cogs.red">
-    <meta property="twiiter:image" content="https://static.cogs.red/img/icon.png">
-    <meta property="twitter:site" content="@orels1tips">
+    <meta property="twitter:domain" content="status.fleetmatica.com">
+    <meta property="twiiter:image" content="https://static.fleetmatica.com/img/icon.png">
+    <meta property="twitter:site" content="@fleetmatica">
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:description" content="See how Cogs.Red is doing">
-    <link rel="icon" href="https://static.cogs.red/img/icon.png">
+    <meta property="twitter:description" content="See how Fleetmatica is doing">
+    <link rel="icon" href="https://static.fleetmatica.com/img/icon.png">
   </head>
   <body>
     <div id="statuspage"></div>
